--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "~2.1.0",
 		"underscore": "~1.6.0",
-		"backbone": "~1.1.2"
+		"backbone": "~1.1.2",
+		"requirejs": "~2.1.11"
   }
 }
